--- a/Thesis_Cutini/thesis_bib.bib
+++ b/Thesis_Cutini/thesis_bib.bib
@@ -151,3 +151,9 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
       archivePrefix={arXiv},
       primaryClass={eess.SY}
 }
+
+@misc{diamondleague,
+  title = {Diamond League Homepage},
+  howpublished = {\url{https://www.diamondleague.com/home/}},
+  note = {Accessed: February 26, 2024}
+}
