--- a/Thesis_Cutini/Thesis_Cutini.tex
+++ b/Thesis_Cutini/Thesis_Cutini.tex
@@ -1065,13 +1065,14 @@ In image \ref{image:mpc_of_scheme} the block diagram of the proposed offset-free
 \end{algorithmic}
 \end{algorithm}
 
-\section{Aerodynamic studies}
+\section{Fluid-dynamic studies}
 \begin{figure}
 	\centering
 	\includegraphics[width=0.6\textwidth]{Aerodynamics.png}
 	\caption{}
-	\label{image:mpc_of_scheme}
+	\label{image:Aerodynamic_studies}
 \end{figure}
+Some fluid-dynamic
 
 
 \chapter{Simulation results and Hardware-in-the-loop validation}
