--- a/Thesis_Cutini/Thesis_Cutini.tex
+++ b/Thesis_Cutini/Thesis_Cutini.tex
@@ -50,44 +50,46 @@ sorting=none
 \thispagestyle{empty}  
                                                
 \begin{center}                                                            
-    \vspace{2mm}
+   % \vspace{2mm}
     {\large ALMA MATER STUDIORUM -- UNIVERSIT\`A DI BOLOGNA} \\  
-                         
-      \vspace{2mm}
-\end{center}
-\begin{center}
 
+   %   \vspace{2mm}
 \end{center}
 \begin{center}
-      \vspace{5mm}
+	\includegraphics[width=0.4\textwidth]{Logo_unibo.png}
+\end{center}
+\begin{center}
+      %\vspace{5mm}
+	\vspace{2mm}
       {\large \uppercase{School of Engineering}} \\
-        \vspace{5mm}
+        %\vspace{5mm}
+	\vspace{2mm}
        {\large Department of\\
        Electrical, Electronic and Information Engineering\\
    		``Guglielmo Marconi''}\\
    		{\large DEI}\\
-        \vspace{5mm}
+        \vspace{2mm}
       {\Large \bf Master's Degree in Automation Engineering}\\
-      \vspace{5mm}
+      \vspace{2mm}
       { \textbf{Master Thesis}\\ in\\ \textit{Optimal Control}}\\
       \vspace{5mm}
       {\LARGE\bf Control of an autonomous aerodynamic airshield for training Olympic 100m sprint athletes} \\                
-      \vspace{15mm}
+      \vspace{5mm}
       
       % table??
 		\begin{tabularx}{\textwidth} { 
 				>{\raggedright\arraybackslash}X 
 				>{\raggedleft\arraybackslash}X }
-				{\large Candidate:}& 	{\large Supervisor:} \\[3mm]
-				{\large \itshape  Giulia Cutini} & {\large \itshape Prof. Giuseppe Notarstefano} \\[3mm]
-				& {\large Co-supervisor:} \\[3mm] 
+				{\large Candidate:}& 	{\large Supervisor:} \\[2mm]
+				{\large \itshape  Giulia Cutini} & {\large \itshape Prof. Giuseppe Notarstefano} \\[2mm]
+				& {\large Co-supervisor:} \\[2mm] 
 				& {\large \itshape Prof. Melanie Zeilinger} \\
                 & {\large \itshape Dr. Andrea Carron} \\
                 & {\large \itshape Ing. Lorenzo Sforni} \\
 		\end{tabularx}
       \vfill
       {\large Academic Year \\ \itshape 2022--2023} \\
-      \vspace{5mm}
+      \vspace{2mm}
       {\large Session \\ \itshape III}
 \end{center}
 
@@ -122,25 +124,25 @@ sorting=none
 \section*{Motivations}
 \addcontentsline{toc}{section}{Motivations}
 
-In contemporary times, the integration of advanced technologies has become an integral facet of sport, ushering in a new era of innovation and performance enhancement \cite{Technology_athletics}. 
-In sports characterized by high-speed competition, where victories are often determined by mere thousandths of a second, the advancements in technology have revolutionized performance across various disciplines. 
+In recent decades, the integration of advanced technologies has become an integral facet of sport, ushering in a new era of innovation and performance enhancement \cite{Technology_athletics}. 
+In sports characterized by high-speed competition, where victories are often determined by fractions of a second, the advancements in technology have revolutionized performance across various disciplines. 
 \bigskip
 
 The development of streamlined swimsuits with advanced materials reduces drag and enhances buoyancy, leading to faster times in competitive swimming events.
 Ski manufacturers utilize materials like carbon fiber and titanium in ski construction, resulting in lighter yet more stable skis that offer better control and responsiveness on the slopes.
-The incorporation of carbon fiber also into athletic footwear has not only reduced weight but also enhanced energy return and propulsion, while concurrently mitigating the risk of injury.
+The incorporation of carbon fiber also into athletic footwear has not only reduced weight but also enhanced energy return and propulsion, while concurrently reducing the risk of injury.
 \bigskip
 
 The exploitation of technology for improving performances is not only used for competitions but also during the training phase. 
 In the track and field context, several training techniques have been used for the enhancement of running speed. 
-Among several possibilities overspeed training involves performing exercises or movements at a velocity higher than what the athlete can achieve through voluntary effort. 
+Among several possibilities overspeed training involves performing exercises or movements at a velocity higher than what the athlete can achieve through voluntary effort in classical environmental conditions. 
 Many methods for experience supramaximal velocities during trainings have been proposed: the usage of assistance mechanisms such as bungee cords or sleds is analized in \cite{Elastic_cord} and is found to be potentially dangerous for sprinters, requiring body contact with an external tool.
 Performing sprints on a downward slope allows to accelerate beyond typical maximal speed due to assistance provided to gravity force \cite{Hill_slope}.
 \bigskip
 
-In the context of gaining a training edge in sprint events the concept of aerodynamic drag resistance assumes a paramount importance. 
+In the context of gaining a training edge in sprint events the concept of aerodynamic drag resistance assumes a great importance. 
 Accordingly sprinters meticulously refine their body position, posture, and apparel to minimize aerodynamic drag. 
-For this reason CONI (Italian National Olympic Committee) Institute of Sports Science presented in 2021 an aerodynamic shield to drastically reduce the resistance to forward movement  during sprinters' training \cite{Coni_article}. 
+For this reason CONI (Italian National Olympic Committee) Institute of Sports Science presented in 2021 an aerodynamic shield to drastically reduce the resistance to forward movement during sprinters' training \cite{Coni_article}. 
 This shield allows athletes to run in the slipstream behind a car pulling the shield, experiencing speeds higher than those of the competition but with the same power output. 
 \bigskip
 
@@ -157,7 +159,7 @@ This thesis is the result of an abroad internship in ETH (Eidgen\"ossische Techn
 \addcontentsline{toc}{section}{Literature}
 Numerous control techniques have been used in the last decades to enhance the efficiency of AVs in several different contexts.
 Longitudinal control of automated vehicles has received attention since the 1960s, and possibly even earlier.
-\cite{Review_AVCS} gives an historical review of advanced vehicle control systems and longitudinal control of automated vehicles. 
+In \cite{Review_AVCS} an historical review of advanced vehicle control systems and longitudinal control of automated vehicles is presented.
 The control of vehicle acceleration to achieve a desired speed profile, essential keypoint of longitudinal control, is the main purpose of this thesis.
 
 \bigskip
@@ -168,8 +170,8 @@ While PID controllers are widely used in industrial applications due to their st
 The main challenges of this control scheme includes difficulty in parameter tuning, in handling multi-variable processing and in addressing the initial phase of motion, where the runner's acceleration exceeds the kart's maximum capability, together with the impossibility of predicting the future motion of vehicle. 
 
 \bigskip
-The task for which the controller has to be designed is quite similar to adaptive cruise control (ACC), where the goal is to maintain a safe distance from the vehicle ahead while also adjusting the speed to match changing traffic conditions.
-Similarly, in this scenario, the controller aims to ensure that the go-kart maintains a consistent position and velocity relative to the runner, analogous to how an adaptive cruise control adjusts the speed of a vehicle to maintain a safe following distance.
+The application requires the go-kart to maintain a consistent desired position and velocity relative to the runner.
+This task is quite similar to adaptive cruise control (ACC), where the goal is to maintain a safe distance from the vehicle ahead while also adjusting the speed to match changing traffic conditions.
 
 \bigskip
 Thanks to the capability of optimal controllers to cover multiple objectives and to predict future vehicle behaviour, Linear Quadratic Regulator (LQR) and Model Predictive Control (MPC) have been widely used for vehicle control in interacting contexts.
@@ -217,34 +219,34 @@ This demonstrate the effectiveness of the proposed methodologies.
 %\addcontentsline{toc}{chapter}{Theoretical Background}
 \markboth{}{THEORETICAL BACKGROUND}
 %\label{chapter:Theoretical_Background}
-In this chapter the aim is to provide the necessary theoretical background for thoroughly understand the design process and the main peculiarities and limitations of the designed controllers: the Linear Quadratic Regulator (LQR) and the Model Predictive Control (MPC).
+In this chapter the aim is to provide the necessary optimal control theoretical background before introducing the design process and the main peculiarities and limitations of the implemented controllers: the Linear Quadratic Regulator (LQR) and the Model Predictive Control (MPC).
 
-Optimal control theory provides a mathematical framework for addressing control theory problems by optimizing control laws with respect to given cost functions. The primary goal is to find a control strategy for a given system while penalizing deviations of the system's states or inputs from desired values.
-This approach enables achieving optimal system regulation, maximizing control effectiveness, and minimizing the adverse effects of variations in operating conditions or external disturbances.
+Optimal control theory provides a mathematical framework for addressing control theory problems by optimizing control laws with respect to given cost functions, in order to achieve optimal system regulation.
 
 Such theoretical analysis is essential for fully comprehending the features and performance of the LQR and MPC controllers discussed in Chapter 2 within the specific context of the considered application.
 
 \section{Linear Quadratic Regulator}
-In 1960, Kalman pioneered with the field of linear-quadratic feedback control, laying the groundwork for what later became known as the Linear Quadratic Regulator (LQR) \cite{kalman_contributions} in the continuous-time context. 
+In 1960, Kalman introduced for the first time the linear-quadratic feedback control, which later evolved into the Linear Quadratic Regulator (LQR) \cite{kalman_contributions} in the continuous-time context. 
 The LQR is a feedback control algorithm designed to stabilize and optimize the performance in case where the dynamical system can be described by linear equations and the cost function is quadratic in terms of the states and inputs. 
 
 \bigskip
-Assuming the process to be controlled to have a good discrete-time LTI description like the following state-space form:
+Assume that the process to be controlled can be described by discrete-time LTI dynamical system, like the following state-space form:
 \begin{equation} 
 \begin{aligned}
-    x^+ &= A x + B u \\
-    y &= C x
+    x_{t+1} &= A x_t + B u_t \\
+    y_t &= C x_t
 \end{aligned}
 \label{eq:Linear_model}
 \end{equation}
 
-where $x \in \mathbb{R}^n$ is the actual system state, $u \in \mathbb{R}^m$ is the system input and $y \in \mathbb{R}^p$ is the measured output, all considered at a certain discrete time instant $t$. 
-The state at the subsequent time instant $t+1$ is referred to as $x^+$.
+where $x_t \in \mathbb{R}^n$ is the actual system state, $u_t \in \mathbb{R}^m$ is the system input and $y_t \in \mathbb{R}^p$ is the measured output, all considered at a certain discrete time instant $t$. 
+The state at the subsequent time instant $t+1$ is referred to as $x_{t+1}$.
 
-$A \in \mathbb{R}^{n\times n}$ and $B\in \mathbb{R}^{n\times m}$ are the state transition and input distribution matrices, respectively.
-In the context of this thesis is possible to assume the full state information available, thus $C \in \mathbb{R}^{p\times n}$ is the identity. 
+$A \in \mathbb{R}^{n\times n}$ and $B\in \mathbb{R}^{n\times m}$ are the state and input matrices, respectively.
+In the context of this thesis is possible to assume the full state information available, thus the input matrix $C \in \mathbb{R}^{p\times n}$ is the identity. 
 
-The primary goal of the control task is to achieve optimal regulation of the system's state towards the origin. 
+\bigskip
+The main goal of the control task is to achieve optimal regulation of the system's state towards the origin. 
 The notion of optimality, in this context, is framed within a quadratic objective function.
 The LQR problem, therefore, can be viewed as a multi-objective optimization task, where the goal is to simultaneously minimize competing objectives.
 For example, minimizing the deviation of the system's states from desired values may require higher control effort, and vice versa.
@@ -259,10 +261,23 @@ find the optimal control input $u_t, \, \forall t \in [0, \infty)$ that makes th
 \end{equation}
 where $Q \in \mathbb{R}^{n \times n}$ and $R \in \mathbb{R}^{m \times m}$ are symmetric positive-definite weight matrices.
 
-The vector $\boldsymbol{u}$ contains the input trajectory, i.e. $\boldsymbol{u} = \{u_0, u_1, \dots\}$ and $\boldsymbol{x}$ is the one containing the state trajectory, i.e $\boldsymbol{x} = \{x_1, x_2, \dots\}$.
-The cost function in \ref{Quadratic_cost_funct} can be seen as the mathematical formulation of the trade-off between the two objectives to be minimized.
+The vector $\boldsymbol{u}$, also known as input trajectory, consists of the input elements, i.e. $\boldsymbol{u} = \{u_0, u_1, \dots\}$ and $\boldsymbol{x}$, the state trajectory, consists of the states along the infinite time horizon i.e $\boldsymbol{x} = \{x_1, x_2, \dots\}$.
+The cost function in \eqref{Quadratic_cost_funct} can be seen as the mathematical formulation of the trade-off between the two objectives to be minimized.
 Specifically the term $x_t^T Q x_t$ penalizes deviations of the system's states from desired values, while $u_t^T R u_t$ penalizes excessive control effort.
 The weights of the $Q$ and $R$, typically chosen as diagonal matrices, can be adjusted to find solutions that strike an appropriate balance between minimizing state deviations and control effort.
+
+\bigskip
+The overall LQR problem can be mathematically translated into the following optimization problem:
+\begin{equation}
+\begin{aligned}
+	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad & \sum_{t=0}^{+\infty}  x_t ^T Q x_t  + u_t^T R u_t  \\
+	\text{subj. to} & \quad x_{t+1}  = A x_t + B u_t \hspace{2cm} t = 0, 1 \ldots. \\
+    & \quad x_0 = x_{\text{init}}
+\end{aligned}
+\label{eq:LQR_1}
+\end{equation}
+where  $x_{\text{init}} \in \mathbb{R}^n$ is the initial condition of the system at time $t=0$.
+
 
 
 \bigskip
@@ -291,7 +306,7 @@ Despite the fact that one of the main applications of LQ optimal control is regu
 To incorporate the desired behaviour to be tracked in the objective, the problem can be written as:
 \begin{equation}
 \begin{aligned}
-	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad J &= \sum_{t=0}^{+\infty}  (x_t - x_{t,\text{des}})^T Q (x_t - x_{t,\text{des}}) + u_t^T R u_t  \\
+	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad & \sum_{t=0}^{+\infty}  (x_t - x_{t,\text{des}})^T Q (x_t - x_{t,\text{des}}) + u_t^T R u_t  \\
 	\text{subj. to} & \quad x_{t+1}  = A x_t + B u_t \hspace{2cm} t = 0, 1 \ldots. \\
     & \quad x_0 = x_{\text{init}}
 \end{aligned}
@@ -323,34 +338,35 @@ MPC relies on the provided dynamic model to predict the behaviour of the system 
 A key aspect of MPC design is selecting a suitable model, one that adequately describes the system's dynamics while maintaining simplicity to ensure tractability and real-time solvability of the optimization problem.
 
 \bigskip
-The description of the linear discrete-time system prediction model is the same shown in \ref{eq:Linear_model}.
+The description of the linear discrete-time system prediction model is the same shown in \eqref{eq:Linear_model}.
 
 For what regards the states and inputs constraints they can be expressed as follows
 \begin{align}
-    x_t & \in \mathcal{X} \\
-    u_t & \in \mathcal{U}
+    x_t & \in \mathcal{X} \quad \quad \forall t = 0,1, \ldots \\
+    u_t & \in \mathcal{U} \quad \quad \forall t = 0,1, \ldots
 \end{align}
 the state set $\mathcal{X}$ is closed and the input set $\mathcal{U}$ is compact and non-empty. Usually the sets are described with linear inequalities and both sets are convex and contain the origin.
 
 \bigskip
 Similarly to the LQR case, Model Predictive Control aims to minimize a cost function by defining positive definite matrices $Q$ and $R$. The goal is to find the optimal control input that minimizes a cost function that takes the following form:
 \begin{equation}
-    J(x_t, \boldsymbol{u}, t) = \sum_{i=t} ^{+ \infty} x_{i|t}^T \, Q \, x_{i|t} + u_{i|t}^T \, R \, u_{i|t}
+    J(\boldsymbol{x}, \boldsymbol{u}; x_t t) = \sum_{i=t} ^{+ \infty} x_{i|t}^T \, Q \, x_{i|t} + u_{i|t}^T \, R \, u_{i|t}
 \end{equation}
 
-In this formulation $x_{i|t}$ represents the predicted state a time $i$, given the actual state $x_{t|t}$. 
+In this formulation $x_{i|t}$ represents the predicted state a time $i$, given the initial state $x_t = x_{t|t}$. 
 Similarly, $u_{i|t}$ is the predicted control sequence at current time $t$ found considering the entire future predicted trajectory for the system.
 
+\bigskip
 The aforementioned formulation represents the infinite horizon MPC problem, that in many practical cases results challenging to be implemented or requires highly demanding computations.
 For this reason usually MPC formulations optimize only on a finite horizon $N$, thus the problem of tracking $x_{\text{des}}$ with the system's states becomes:
 
 \begin{equation}
 \begin{alignedat}{2}
-	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad J &= \sum_{i=t}^{t+N-1} (x_{i|t} - x_{t,\text{des}}) ^T \, Q \, (x_{i|t} - x_{t,\text{des}}) +  u_{i|t}^T \, R \, u_{i|t} &&   \\
-	\text{subj. to} & \quad x_{i+1|t}  = A x_{i|t} + B u_{i|t}   \hspace{2cm} t = 0, 1 \ldots. &&  \\
+	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad & \sum_{i=t}^{t+N-1} (x_{i|t} - x_{t,\text{des}}) ^T \, Q \, (x_{i|t} - x_{t,\text{des}}) +  u_{i|t}^T \, R \, u_{i|t} &&   \\
+	\text{subj. to} & \quad x_{i+1|t}  = A x_{i|t} + B u_{i|t}   \hspace{2cm} t = 0, 1 \ldots N &&  \\
      &\quad x_{i|t} \in \mathcal{X} && \\
     &\quad u_{i|t} \in \mathcal{U} && \\
-    &\quad x_{t|t} = x_{\text{meas}} && 
+    &\quad x_{t|t} = x_{\text{meas}}(t) && 
 \end{alignedat}
 \label{MPC1}
 \end{equation}
@@ -374,22 +390,22 @@ This procedure is repeated, as illustrated in figure \ref{image:mpc}, at each ti
 
 
 \section{Offset-free tracking MPC and disturbance observer}
+Regulating nonlinear systems using a linear predictive control framework can be a complex task and the model-plant mismatch due to the unmodeled nonlinear dynamics effects, can result in suboptimal performances of the controller.
 Even if MPC is able to react to small unmodeled dynamics effects through the receding-horizon fashion, it is not able to consider them inside the predictions, thus to optimize upon them.
 MPC solves at each time an optimal control problem using the nominal model of the controlled process and, only when the actual plant behaviour closely matches the nominal model, the feedback control scheme can be guaranteed to stabilize the system, and achieve precise tracking of desired setpoints without any offset.
-
-Offset-free Model Predictive Control represents and advanced control strategy designed to address this limitation. It aims to achieve zero steady-state tracking errors in the controlled system, even in presence of disturbances or model uncertainties that cause model-plant mismatch.
+Offset-free Model Predictive Control represents an advanced control strategy designed to address this limitation. It aims to achieve zero steady-state tracking errors in the controlled system, even in presence of disturbances or model uncertainties that cause model-plant mismatch.
 For instance, in the context of regulating nonlinear systems using a linear predictive control framework, offset-free MPC seeks to regulate the system to its desired setpoint without steady-state error, ensuring precise and accurate control performance.
 
 \bigskip
 Consider a discrete-time, time-invariant system describing the plant:
 \begin{equation}
 \begin{aligned}
-    x_m^+ &= f_m (x_m, u) \\
-    y_m &= h_m (x_m) 
+    x_{m,t+1}+ &= f_m (x_{m,t}, u_t) \\
+    y_{m,t} &= h_m (x_{m,t}) 
 \end{aligned}
 \label{Plant1}
 \end{equation}
-where $x_m \in \mathbb{R}^n$, $u \in \mathbb{R}^m$ and $y_m \in \mathbb{R}^p$ are the state, input and plant measured output respectively. 
+where $x_{m,t} \in \mathbb{R}^n$, $u_t \in \mathbb{R}^m$ and $y_{m,t} \in \mathbb{R}^p$ are the state, input and plant measured output respectively at time t.
 
 The aim of the offset-free model predictive controller is to have $y_m$ tracking a certain reference signal $y_{\text{des}} \in \mathbb{R}^p$ that is assumed to asymptotically converge to a constant.
 
@@ -402,14 +418,23 @@ Let $w \in \mathbb{R}^n$ and $v \in \mathbb{R}^p$ be defined as:
 \end{aligned}
 \label{Plant_model_mismatch}
 \end{equation}
-where the $A$, $B$ and $C$ matrices are the ones mentioned in the linear model \ref{eq:Linear_model}. In particular the $w$ term express the model mismatch between the non-linear plant model and the linear predictive model.
+where $w \in \mathbb{R}^n$ is the model mismatch between the non-linear plant model and the linear predictive model, $v \in \mathbb{R}^m$ is the output mismatch between predicted output and the real measured plant one.
+the $A$, $B$ and $C$ matrices are the ones mentioned in the linear model \ref{eq:Linear_model}.
 
 \bigskip
-The key feature of this control strategy lies in the incorporation of a disturbance model in the prediction model \ref{eq:Linear_model}.
-This is used to estimate and predict the model-plant mismatch between \ref{eq:Linear_model} and \ref{Plant1} in steady state, thus the $w$ term. 
+The key feature of this offset-free control strategy lies in the incorporation of a disturbance model in the prediction model \ref{eq:Linear_model}.
+This disturbance allows to capture the mismatch between the linear prediction model \eqref{eq:Linear_model} and the nonlinear plant \ref{Plant1} in steady state, thus the $w$ term.
 
-\bigskip
-Accordingly, an augmented model is used for computing the system's predictions in the offset-free MPC framework. 
+The steps that have to be followed, in order to have an offset-free MPC formulation, are the following:
+\begin{enumerate}
+	\item Introduce an augmented prediction model with an additional integrating state known as disturbance
+	\item Design a state and disturbance estimator based on the augmented model
+	\item Modify the MPC formulation into an offset-free one
+\end{enumerate}
+Each point will be properly explained in the following.
+
+\subsection{Augmented model with disturbance}
+Accordingly the given introduction, the first step consists in introducing an augmented model for computing the system's predictions in the offset-free MPC framework. 
 It can be, in general, written in the following form:
 \begin{equation}
 \begin{aligned}
@@ -423,7 +448,7 @@ where the additional state $d_t \in \mathbb{R}^{n_d}$ is known as disturbance st
 The maximum dimension of the disturbance state has to be equal to the number of measured outputs, i.e. $n_d \leq p$.
 The pair $(B_d, C_d)$ can be seen as the disturbance model where $B_d \in \mathbb{R}^{n \times n_d}$ and $C_d \in \mathbb{R}^{m \times n_d}$.
 
-\bigskip
+\subsection{Disturbance observer and estimator}
 Assuming observability of the augmented system \ref{Augmented_model}, an estimator that continuously estimates the augmented state $(x,d)$ can be designed.
 An example could be a linear disturbance observer, that uses the prediction error between the real plant output and the predicted one, to estimate the augmented state as described by the following dynamical system:
 \begin{equation}
@@ -476,14 +501,50 @@ An example could be a linear disturbance observer, that uses the prediction erro
     \end{aligned}
 \label{eq:Estimator_and_observer}
 \end{equation}
-where $\hat{x}$ and $\hat{d}$ are the state and disturbance estimates.
+where $\hat{x} \in \mathbb{R}^n$ and $\hat{d} \in \mathbb{R}^{n_d}$ are the state and disturbance estimates.
 
-\bigskip
-Given the current estimates of the augmented state $(\hat{x}_t, \hat{d}_t)$ the MPC classical formulation is modified into an offset-free MPC algorithm as follows:
+The matrices $A_e \in \mathbb{R}^{(n+n_d) \times (n+n_d)}$, $B_e \in \mathbb{R}^{(n+n_d) \times m}$ and $C_e \in \mathbb{R}^{m \times (n + n_d)}$ are the following:
+\begin{equation}
+    A_e =
+    \begin{bmatrix}
+        A & B_d \\
+        0 & I  
+    \end{bmatrix},
+    \quad
+    B_e = 
+    \begin{bmatrix}
+        B \\
+        0  
+    \end{bmatrix},
+    \quad
+    C_e = 
+    \begin{bmatrix}
+        C & C_d 
+    \end{bmatrix}.
+\end{equation}
+The $L \in \mathbb{R}^{(n+n_d) \times n}$ is the the following one:
+\begin{equation}
+    L =
+    \begin{bmatrix}
+        L_x \\
+	L_d 
+    \end{bmatrix}
+\end{equation}
+
+The system in \eqref{eq:Estimator_and_observer} estimates, at each time instant t the unknown disturbance (i.e. the model-plant mismatch in this context) in addition to states. 
+The estimation is performed evaluating the prediction error between the measured plant output and the predicted one.
+
+\subsection{Offset-free MPC formulation}
+Given the current estimates of the augmented state $(\hat{x}_t, \hat{d}_t)$ the MPC classical formulation is modified into an offset-free MPC algorithm.
+
+The estimated variables  $(\hat{x}_t, \hat{d}_t)$ are used as initial states for the MPC solution at the current time instant.
+The augmented model in \eqref{Augmented_model} is used as prediction model: the disturbance is added both as a constant state, and in the state evolution.
+
+The resulting formulation is the following one:
 \begin{equation}
 \begin{alignedat}{2}
-	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad J &= \sum_{i=t}^{t+N-1} (x_{i|t} - \bar{x}_t) ^T \, Q \, (x_{i|t} -  \bar{x}_t) +  (u_{i|t} - \bar{u}_t)^T \, R \, (u_{i|t} - \bar{u}_t) &&  \\
-	\text{subj. to} & \quad x_{i+1|t}  = A x_{i|t} + B u_{i|t} + B_d d_{i|t} \hspace{1.5cm} t = 0, 1 \ldots. &&  \\
+	\min_{\substack{\boldsymbol{x}, \boldsymbol{u}}}\quad & \sum_{i=t}^{t+N-1} (x_{i|t} - \bar{x}_t) ^T \, Q \, (x_{i|t} -  \bar{x}_t) +  (u_{i|t} - \bar{u}_t)^T \, R \, (u_{i|t} - \bar{u}_t) &&  \\
+	\text{subj. to} & \quad x_{i+1|t}  = A x_{i|t} + B u_{i|t} + B_d d_{i|t} \hspace{1.5cm} t = 0, 1 \ldots N &&  \\
     & \quad d_{i+1|t}  = d_{i|t} && \\
     &\quad x_{i|t} \in \mathcal{X} &&  \\
     &\quad u_{i|t} \in \mathcal{U} && \\
@@ -492,7 +553,7 @@ Given the current estimates of the augmented state $(\hat{x}_t, \hat{d}_t)$ the 
 \end{alignedat}
 \label{MPC:offset-free}
 \end{equation}
-where $\bar{x}_t$ and $\bar{u}_t$ are solution of the following system:
+where $\bar{x}_t \in \mathbb{R}^n$ and $\bar{u}_t \in \mathbb{R}^m$ are solution of the following system:
 
 \begin{equation}
     \begin{bmatrix}
@@ -510,14 +571,14 @@ where $\bar{x}_t$ and $\bar{u}_t$ are solution of the following system:
 	\end{bmatrix}
 \end{equation}
 
-This optimization cancels the estimated disturbances $\hat{d}_t$ and thanks to this action is able to track the given feasible setpoint with the controlled variables.
+This system is overconstrained and there the right hand side term takes into account the disturbance estimation in the system and the desired reference setpoint for the plant output. 
 
 \subsection{Observer design}
 %\addcontentsline{toc}{section}{Observer design}
 
-In this formulation the nominal augmented state $(x,d)$ needs to be estimated at each time instant, given the plant output measurement $y_p$.
+In this formulation the nominal augmented state $(x,d)$ needs to be estimated at each time instant, given the plant output measurement $y_p$, according to the dynamical estimator system in \eqref{eq:Estimator_and_observer}.
 
-The $L_x \in \mathbb{R}^{n \times p}$ and $L_d \in \mathbb{R}^{n \times n_d} $ observer gain matrices in \ref{eq:Estimator_and_observer} has to be designed in such a way the estimator to be stable, while the method doesn't matter for our purposes.
+The $L_x \in \mathbb{R}^{n \times n_d}$ and $L_d \in \mathbb{R}^{n_d \times n} $ observer gain matrices in \ref{eq:Estimator_and_observer} has to be designed in such a way the estimator to be stable, while the method doesn't matter for our purposes.
 
 \bigskip
 Two possible choices of state estimator could be Luenberger observer or the Kalman filter. 
@@ -1104,7 +1165,9 @@ Later an overview of the hardware structure and sensors equipment of the system 
 Finally, some test developed on the real hardware are presented and their results are compared with the simulation framework.
 
 \section{Simulation results}
-This section presents the results obtained carrying out a Python simulation of the go-kart non linear dynamical model trying to follow a velocity profile simulating the runner behaviour during a competition or a training.
+This section presents the results obtained carrying out a Python simulation of the go-kart non linear dynamical model, trying to follow a velocity profile simulating the runner behaviour during a competition or a training.
+
+\bigskip
 The three controllers: Linear Quadratic Regulator, Model Predictive Control and Offset-Free Model Predictive Control have been tested and their performances are evaluated and compared.
 To assess the performance of the controllers and evaluate the application's behaviour, empirical data from two presigious Diamond League competitions \cite{diamondleague}  have been employed, focusing on the winners of the 100m sprint both in the man's and women's categories. 
 
@@ -1172,7 +1235,11 @@ The parameters used for the evaluation and comparison of the controllers perform
 	\item "Rise" time to reach a desired reference distance of 2.6m from kart: refers to the duration taken by the system's output to transition from the initial state to the desired position setpoint. It represents the speed at which the system responds to changes in the reference signal and it's indicative of the controller's dynamic responsiveness.
 \end{itemize}
 
-\newpage
+\subsection*{CVXPY and OSQP solver}
+The quadratic optimization problems in the MPC formulations have been solved using the CVXPY library \cite{diamond2016cvxpy}, mathematical framework used to solve optimization problems and the OSQP solver \cite{Stellato_2020}.
+CVXPY allows to express the convex optimization problem to be solved according to a natural syntax that follows the math, and is later automatically converted into the standard form required by generic solvers.
+OSQP (Operator Splitting Quadratic Program) is a high-performance solver for convex quadratic programming problems well suited for applications in control systems, robotics and machine learning.
+
 \subsection{Test on women velocity profile of Ta Lou}
 \begin{figure}[h!]
     \centering
@@ -1199,6 +1266,7 @@ The parameters used for the evaluation and comparison of the controllers perform
 
 The initial distance used for the simulation is $\bar{d} = 4$ meters.
 
+\bigskip
 Both Table \ref{tab:Ta_Lou} and figure \ref{fig:Women} clearly demonstrate that the LQR controller exibits poorer performance compared to the other controllers.
 Specifically, considering the minimum distance between runner and go-kart, the LQR performs significantly worse than the other two controllers and violates the safety distance state constraints $d_{\text{safe}}$ introduced in both the MPC formulations.
 The LQR also has the highest mean value of position deviation ($\Delta p$) and velocity deviation ($\Delta v$) indicating a less accurate tracking performance compared to MPC and MPC Offset-free.
@@ -1227,7 +1295,6 @@ The three controllers show similar energy consumption over time.
 \end{table}
 
 
-\newpage
 \subsection{Test on men velocity profile of Coleman}
 \begin{figure}[h!]
     \centering
@@ -1283,7 +1350,7 @@ Furthermore, it's worth noting that the offset-free MPC consistently outperforms
 It should be noticed that, in both the scenario saturation phenomenon is present for a consistent part of the tracking with the LQR controller.
 
 
-\section{System structure and hardware description}
+\section{System structure, hardware description}
 This part discuss the hardware components present in the system.
 
 \bigskip
@@ -1493,8 +1560,41 @@ For this purpose a Kalman filter has been used.
 
 Tutto il discorso sul noise
 
-\section{Real-hardware test}
+\section{Real-hardware test and tools}
 In the following some results of test developed on real-hardware are presented.
+
+\subsection{Tools}
+In this paragraph the tools used for the development of the controllers implementation on the system are briefly presented.
+
+\subsubsection*{Robot Operating System}
+The Robot Operating System (ROS) is an open-source middleware framework specifically designed for robotics research and development. 
+Despite the name it is not a real operating system but it's a collection of libraries, tools and conventions that allows robotic developers to share, re-use and manage the applications.
+ROS was born as a personal project of Keenan Wyrobek and Eric Berger, students at Stanford University and creators of the Stanford Personal Robot Program, with the purpose of creating a unified software for robotics applications.
+One of the key features of ROS is its modular architecture, which promotes code reuse and modularity by breaking down robot applications into smaller, reusable components called "nodes." 
+These nodes can communicate with each other using a publish-subscribe messaging system, allowing for flexible and decentralized control architectures.
+ROS provides a rich set of libraries and tools for common robotics tasks, including sensor integration, perception, localization, mapping, motion planning, and control. 
+
+It is designed to run on top of a traditional operating system, currently supported by Ubuntu or Debian, acting as a middleware and providing a layer of software infrasctructure that sits between the operating system and the robot application software.
+The environment is written and supports mainly C++ and Python, but ROS has also been designed to be language-neutral so it is possible to use also other programming languages.
+
+ROS, and in particular its successor ROS2, offers numerous features and improvements that make it well-suited for driving autonomous systems and automated driving projects.
+A the core of ROS2's functionality lies the ability to run directly on the onboard computer of autonomous systems, having Ubuntu pre-installed, processing sensors raw data and executing the proper control algorithms.
+However, the true power of ROS2 lies not only in its individual capabilities but in its ability to facilitate seamless communication and collaboration between disparate components of the autonomous system. 
+Through ROS2's publish-subscribe messaging paradigm, nodes exchange information, share insights, and coordinate actions, creating a cohesive and adaptive autonomous ecosystem.
+
+\subsubsection*{Docker}
+Docker is an open-source platform that enables developers to package, distribute, and run applications in lightweight, portable containers. 
+These containers encapsulate all the dependencies and runtime components needed to run an application, including the code, runtime, system tools, libraries, and settings.
+Docker containers are designed to be isolated from each other and from the underlying host system, ensuring consistent and reliable execution across different environments.
+The only thing preventing a container from being able to stand alone is that it relies on the host’s operating system (OS) and kernel for low-level services, such as resource management and network access.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\textwidth]{Docker.png}
+	\caption{Docker}
+	\label{image:Docker}
+\end{figure}
+
+
 
 \begin{figure}[h!]
     \centering
