--- a/Thesis_Cutini/thesis_bib.bib
+++ b/Thesis_Cutini/thesis_bib.bib
@@ -157,3 +157,25 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
   howpublished = {\url{https://www.diamondleague.com/home/}},
   note = {Accessed: February 26, 2024}
 }
+
+@misc{diamond2016cvxpy,
+      title={CVXPY: A Python-Embedded Modeling Language for Convex Optimization}, 
+      author={Steven Diamond and Stephen Boyd},
+      year={2016},
+      eprint={1603.00943},
+      archivePrefix={arXiv},
+      primaryClass={math.OC}
+}
+
+@article{Stellato_2020,
+   title={OSQP: an operator splitting solver for quadratic programs},
+   volume={12},
+   ISSN={1867-2957},
+   url={http://dx.doi.org/10.1007/s12532-020-00179-2},
+   DOI={10.1007/s12532-020-00179-2},
+   number={4},
+   journal={Mathematical Programming Computation},
+   publisher={Springer Science and Business Media LLC},
+   author={Stellato, Bartolomeo and Banjac, Goran and Goulart, Paul and Bemporad, Alberto and Boyd, Stephen},
+   year={2020},
+   month=feb, pages={637–672} }
